--- a/Material/Prácticas/Dirigidas/01/PD_01.tex
+++ b/Material/Prácticas/Dirigidas/01/PD_01.tex
@@ -33,7 +33,7 @@
 		
 		\textsc{Ecuaciones Diferenciales}
 		
-		Ecuaciones Diferenciales I
+		Ecuaciones Diferenciales de Primer y Segundo Orden
 		
 	\end{center}
 	
