--- a/Material/Prácticas/Dirigidas/02/PD_02.tex
+++ b/Material/Prácticas/Dirigidas/02/PD_02.tex
@@ -73,12 +73,12 @@
 					\item $y_{t+2}-11_{t+1}+10y_{t}=27 \quad y_{(0)}=2 \quad y_{(1)} = 53$ %Dowling 421
 					\item $y_{t}-10_{t-1}+25y_{t-2}=8 \quad y_{(0)}=1 \quad y_{(1)} = 5$ %Dowling 421
 				\end{enumerate}
-		\item \textbf{Aplicaciones Económica}
+		\item \textbf{Aplicaciones Económicas}
 			\begin{enumerate}
-				\item \textbf{Modelo de determinación de ingresos retesados}
+				\item \textbf{Modelo de determinación de ingresos retrasados}
 					$$C_t=90+0.8Y_{t-1} \qquad T_t=50 \qquad Y_0 = 1200$$
 				\item \textbf{Modelo de la telaraña}
-					$$Q_{dt}=180-0.75P_t \qquad Q_{st}=-30+0.3P_{t-1 \qquad P_0=200}$$
+					$$Q_{dt}=180-0.75P_t \qquad Q_{st}=-30+0.3P_{t-1} \qquad P_{0}=200$$
 				\item \textbf{Modelo de crecimiento de Harrod}
 					$$I_t=2.66(Y_t-Y_{t-1}) \qquad S_t = 0.16Y_t \qquad Y_0=9000$$
 			\end{enumerate}
