--- a/Material/Prácticas/Dirigidas/02/PD_02.tex
+++ b/Material/Prácticas/Dirigidas/02/PD_02.tex
@@ -75,7 +75,7 @@
 				\end{enumerate}
 		\item \textbf{Aplicaciones Económicas}
 			\begin{enumerate}
-				\item \textbf{Modelo de determinación de ingresos retrasados}
+				\item \textbf{Modelo de determinación de ingresos retardado}
 					$$C_t=90+0.8Y_{t-1} \qquad T_t=50 \qquad Y_0 = 1200$$
 				\item \textbf{Modelo de la telaraña}
 					$$Q_{dt}=180-0.75P_t \qquad Q_{st}=-30+0.3P_{t-1} \qquad P_{0}=200$$
