--- a/Material/Prácticas/Dirigidas/02/PD_02.tex
+++ b/Material/Prácticas/Dirigidas/02/PD_02.tex
@@ -23,7 +23,7 @@
 \pagestyle{fancy} \rhead{\scriptsize{\textbf{Código del Curso:} EP-3072} \\
 	\textbf{Fecha:} 14/07/2021 \& 2021-I \hspace{0.03cm}}
 \lhead{\scriptsize{\textbf{Profesor:} Joel Vicencio-Damian}  \\
-	\textbf{Curso:} Macroeconomía Dinámica}
+	\textbf{Curso:} Macroeconomía Dinámica-Prácticas}
 \newcommand{\re}[1]{\smallskip\textsf{\textbf{Respuesta}} \begin{sf}\\ #1 \end{sf} \bigskip}
 \newcommand{\ay}[1]{ \scriptsize{\textsl{Hint: #1}}\normalsize{}}
 \newcommand{\pr}[2]{\frac{\partial #1}{\partial #2}}
