--- a/Material/Prácticas/Dirigidas/03/Dir_03.tex
+++ b/Material/Prácticas/Dirigidas/03/Dir_03.tex
@@ -1,7 +1,7 @@
 \documentclass[11pt,a4paper]{article}
 
 
-\usepackage[utf8]{inputenc}
+\usepackage[latin1]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[spanish]{babel}
 
