--- a/Material/Prácticas/Dirigidas/04/Dir_04.tex
+++ b/Material/Prácticas/Dirigidas/04/Dir_04.tex
@@ -50,6 +50,7 @@
 					\item [1c)] $V(y)=\int\limits_{0}^{T}(t\dot{y}+\dot{y}^2)dt,\, \textup{con}\enskip y(0)=1,\, y(T)=10\enskip \textup{y}\enskip T\, es\, libre$
 					\item [1d)] $V(y)=-\int\limits_{0}^{T}(1+\dot{y}^2)^{0.5}dt,\, \textup{con}\enskip y(0)=1,\, y(T)=2-3T$
 					\item [1e)] $V(y)=\int\limits_{0}^{T}(1+\dot{y}^2)^{0.5}dt,\, \textup{con}\enskip y(0)=1,\, y(T)=2-T$
+					\item [1f)]$V(y) = \int \limits_{0}^{\infty} e^{-\rho t}(y^{2}+ay+b\dot{y}+c\dot{y}^{2})dt, \enskip y(0)=d, \enskip (a, b, c, d, \rho > 0)$
 				\end{enumerate}
 		\item Diagrama de Fases
 				\begin{enumerate}[2a)]
@@ -65,8 +66,10 @@
 						\end{align*}
 					  Dibujar el diagrama de fases según las siguientes condiciones:
 						\begin{align*}
-							& a>0,\enskip b<0,\enskip c>0,\enskip d>0 & a>0,\enskip b<0,\enskip c<0,\enskip d<0\\
-							& a<0,\enskip b>0,\enskip c>0,\enskip d<0 & a=0,\enskip b<0,\enskip c>0,\enskip d=0
+							 \textup{Caso I: } & a>0,\enskip b<0,\enskip c>0,\enskip d>0\\ 
+							 \textup{Caso II: } & a<0,\enskip b>0,\enskip c>0,\enskip d<0\\
+							 \textup{Caso III: } & a>0,\enskip b<0,\enskip c<0,\enskip d<0\\
+							 \textup{Caso IV: } & a=0,\enskip b<0,\enskip c>0,\enskip d=0
 						\end{align*}
 					\item Realice el diagrama de fases de los siguientes sistemas de sistemas de ecuaciones diferenciale.
 						\begin{enumerate}[2c1)]
